--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-<div id="msg"><h1>Hi,</h1> <h2><bold>SAGAR</bold> want to say something, please login to hear it</h2> <h2>Don't worry , login is very easy step .Just tap on "signin with google" and you are done 😁</h2></div>
+<div id="msg"><h1>Hi,</h1> <h2><bold>SAGAR</bold> want to say something, please login to hear it</h2> <h2>Don't worry , login is very easy step </h2></div>
 <div id="firebaseui-auth-container"></div>
 <div id="loader">loding.../</div>
 
